--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,7 +26,7 @@
 
 		  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-		  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 
@@ -88,17 +88,17 @@
 
 		    <div id="menu1" class="tab-pane fade">
 		      <h3>Linear Regression (OLS) Model</h3>
-		      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		      <p>Linear Regression with Ordinary Least Squares</p>
 		    </div>
 
 		    <div id="menu2" class="tab-pane fade">
 		      <h3>K-Nearest Neighbor</h3>
-		      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+		      <p>K Nearest Neighbor</p>
 		    </div>
 
 		    <div id="menu3" class="tab-pane fade">
 		      <h3>Support Vector Machine</h3>
-		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+		      <p>Support Vector Machine</p>
 		    </div>
 
 		    <div id="menu4" class="tab-pane fade">
@@ -111,59 +111,59 @@
 <!-- 				    <small id="emailHelp" class="form-text text-muted">Defaults to PG-13</small>
  -->				  </div>
 			      <div class="col-xs-6 form-group">
-				    <label for="exampleInputEmail1">Runtime (minutes)</label>
-				    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter runtime">
+				    <label for="exampleInputEmail1">Runtime (min)</label>
+				    <input type="text" class="form-control" id="inputRuntime" aria-describedby="emailHelp" placeholder="Enter runtime">
 				    <!-- <small id="emailHelp" class="form-text text-muted">Defaults to median value of training data (100)<data></data>)</small> -->
 				  </div>
 			  </div>
 			  <div class="row">
 			      <div class="col-xs-6 form-group">
 				    <label for="genreBox">Genre</label>
-				    <input type="text" class="form-control" id="myinput" aria-describedby="emailHelp" placeholder="Comedy, Drama, Thriller, etc...">
+				    <input type="text" class="form-control" id="inputGenre" aria-describedby="emailHelp" placeholder="Comedy, Drama, Thriller, etc...">
 <!-- 				    <small id="emailHelp" class="form-text text-muted">Defaults to Comedy</small>
  -->				  </div>
 			      <div class="col-xs-6 form-group">
 				    <label for="exampleInputEmail1">Critic Rating</label>
-				    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="0-100">
+				    <input type="text" class="form-control" id="inputCritic" aria-describedby="emailHelp" placeholder="0-100">
 				    <!-- <small id="emailHelp" class="form-text text-muted">Defaults to 5<data></data>)</small> -->
 				  </div>
 			  </div>
 			  <div class="row">
 			      <div class="col-xs-6 form-group">
 				    <label for="exampleInputEmail1">Year Released</label>
-				    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="2005-2012">
+				    <input type="text" class="form-control" id="inputYear" aria-describedby="emailHelp" placeholder="2005-2012">
 <!-- 				    <small id="emailHelp" class="form-text text-muted">Defaults to 50</small>
  -->				  </div>
 			      <div class="col-xs-6 form-group">
 				    <label for="exampleInputEmail1">Month Released</label>
-				    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="1-12">
+				    <input type="text" class="form-control" id="inputMonth" aria-describedby="emailHelp" placeholder="1-12">
 <!-- 				    <small id="emailHelp" class="form-text text-muted">Defaults to median value of training data (100)	<data></data>)</small>
  -->				  </div>
 			  </div>
 			  <div class="row">
 			      <div class="col-xs-6 form-group">
 				    <label for="exampleInputEmail1">Production Budget</label>
-				    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="0-500000000">
+				    <input type="text" class="form-control" id="inputBudget" aria-describedby="emailHelp" placeholder="0-500000000">
 <!-- 				    <small id="emailHelp" class="form-text text-muted">Defaults to 50</small>
  -->				  </div>
 			      <div class="col-xs-6 form-group">
 				    <label for="exampleInputEmail1">YouTube Likes (of trailer)</label>
-				    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="0-50000">
+				    <input type="text" class="form-control" id="inputYoutube" aria-describedby="emailHelp" placeholder="0-50000">
 <!-- 				    <small id="emailHelp" class="form-text text-muted">Defaults to median value of training data (100)	<data></data>)</small>
  -->				  </div>
 			  </div>
 			   <div class="row">
 			      <div class="col-xs-12 form-group">
 				    <label for="exampleInputEmail1">Plot</label>
-				    <textarea class="form-control" rows="5" id="comment" plaecholder="Any plot description"></textarea>
+				    <textarea class="form-control" rows="5" id="inputPlot" plaecholder="Any plot description"></textarea>
 
-<!-- 				    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Any plot description">
- --><!-- 				    <small id="emailHelp" class="form-text text-muted">Defaults to 50</small>
- -->				  </div>
+  				    <small id="emailHelp" class="form-text text-muted">Sent to AYLIEN sentiment analysis</small>
+ 				  </div>
+ 				</div>
 			      
 			 <div class="btn-group">
-			  <button type="button" class="btn btn-default">Lin Reg (OLS)</button>
-			  <button type="button" class="btn btn-default">SVM</button>
+			  <button type="button" id="ols-button" class="btn btn-default">Lin Reg (OLS)</button>
+			  <button type="button" id="svm-button" class="btn btn-default">SVM</button>
 
 			  <div class="btn-group">
 			    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -171,41 +171,42 @@
 			      <span class="caret"></span>
 			    </button>
 			    <ul class="dropdown-menu">
-			      <li><a href="#">5NN</a></li>
-			      <li><a href="#">10NN</a></li>
-			      <li><a href="#">20NN</a></li>
-			      <li><a href="#">50NN</a></li>
+			      <li><a id="5nn-button" href="#">5NN</a></li>
+			      <li><a id="10nn-button" href="#">10NN</a></li>
+			      <li><a id="20nn-button" href="#">20NN</a></li>
+			      <li><a id="50nn-button" href="#">50NN</a></li>
 			    </ul>
 			  </div>
-			</div>
+			 </div>
 			 
-			</form>
+			 </form>
 
 		    </div>
+
 		    <div id="menu5" class="tab-pane fade">
 		      <h3>Scatter Plots</h3>
-		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+		      <p>Scatter Plots</p>
 		    </div>
 
 		    <div id="menu6" class="tab-pane fade">
 		      <h3>Actor Graph</h3>
-		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+		      <p>Actor Graph</p>
 		    </div>
 
 		    <div id="menu7" class="tab-pane fade">
 		      <h3>Choropleth</h3>
-		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+		      <p>Choropleth</p>
 		    </div>
 
 		    <div id="menu8" class="tab-pane fade">
 		      <h3>Time Bar Chart</h3>
-		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+		      <p>Time Bar Chart</p>
 		    </div>
 
-		    <div id="menu9" class="tab-pane fade">
+		   <!--  <div id="menu9" class="tab-pane fade">
 		      <h3>Menu 3</h3>
 		      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-		    </div>
+		    </div> -->
 
 		  </div>
 		</div>
@@ -213,32 +214,42 @@
 		</body>
 		<script>
 
-		// { label: "Sci-Fi", value: 7103249 },
-		// 			{ label: "Crime", value: 2422306 },
-		// 			{ label: "Romance", value: 10769463 },
-		// 			{ label: "Animation", value: 1877737 },
-		// 			{ label: "Music", value: 14091202 },
-		// 			{ label: "Comedy", value: 11237616 },
-		// 			{ label: "War", value: -2611214 },
-		// 			{ label: "Horror", value: 18267440 },
-		// 			{ label: "Western", value: 13823376 },
-		// 			{ label: "Thriller", value: 10871198 },
-		// 			{ label: "Adventure", value: 9177757 },
-		// 			{ label: "Mystery", value: 1309341 },
-		// 			{ label: "Short", value: -8026285 },
-		// 			{ label: "Drama", value: 5919330 },
-		// 			{ label: "Action", value: 5122789 },
-		// 			{ label: "Documentary", value: 6371952 },
-		// 			{ label: "Musical", value: 9578002 },
-		// 			{ label: "History", value: 1323353 },
-		// 			{ label: "Family", value: 18374461 },
-		// 			{ label: "Fantasy", value: -381598 },
-		// 			{ label: "Sport", value: 12280860 },
-		// 			{ label: "Biography", value: 5011643 }
+		genreDict = {
+			"Sci-Fi": 7103249,
+			"Crime": 2422306,
+			"Romance": 10769463,
+			"Animation": 1877737,
+			"Music": 14091202,
+			"Comedy": 11237616,
+			"War": -2611214,
+			"Horror": 18267440,
+			"Western": 13823376,
+			"Thriller": 10871198,
+			"Adventure": 9177757,
+			"Mystery": 1309341,
+			"Short": -8026285,
+			"Drama": 5919330,
+			"Action": 5122789,
+			"Documentary": 6371952,
+			"Musical": 9578002,
+			"History": 1323353,
+			"Family": 18374461,
+			"Fantasy": -381598,
+			"Sport": 12280860,
+			"Biography": 5011643
+		}
 
-			var input = document.getElementById("myinput");
+		ratingDict = {
+			"G": 18385330,
+			"NC-17": -5851569,
+			"PG-13": 9899276,
+			"R": 8133748,
+			"PG": 12706625 
+		}
 
-			new Awesomplete(input, {
+			var inputGenre = document.getElementById("inputGenre");
+
+			new Awesomplete(inputGenre, {
 				list: [
 					"Sci-Fi",
 					"Crime",
@@ -293,11 +304,78 @@
 				}
 			});
 
-			// { label: "G", value: 18385330 },
-			// 		{ label: "NC-17", value: -5851569 },
-			// 		{ label: "PG-13", value: 9899276 }
-			// 		{ label: "R", value: 8133748 },
-			// 		{ label: "PG", value: 12706625 },
+			
+
+			$('#ols-button, #svm-button, #5nn-button, #10nn-button, #20nn-button, #50nn-button').on('click', function(d) {
+				modelButtonClicked(d.target.id) 
+			})
+
+			function modelButtonClicked(b) {
+				data = {}
+				thisRating = $("#inputRating").val();
+				if (thisRating in ratingDict) {
+					data.rating = ratingDict[thisRating]
+				} else {
+					data.rating = 0
+				}
+				data.runtime = $("#inputRuntime").val();
+				thisGenre = $("#inputGenre").val();
+				if (thisGenre in genreDict) {
+					data.genre = genreDict[thisGenre]
+				} else {
+					data.genre = 0
+				}
+				data.critic = $("#inputCritic").val();
+				data.year = $("#inputYear").val();
+				data.month = $("#inputMonth").val();
+				data.budget = $("#inputBudget").val();
+				data.youtube = $("#inputYoutube").val();
+				data.plot = $("#inputPlot").val();
+				console.log(data)
+
+				path = "/"
+
+				switch(b) {
+					case "ols-button":
+						console.log("ols-button clicked")
+						path += "ols"
+						break;
+					case "svm-button":
+						console.log("svm-button clicked")
+						path += "svm"
+						break;
+					case "5nn-button":
+						console.log("5nn-button clicked")
+						path += "knn/5"
+						break;
+					case "10nn-button":
+						console.log("10nn-button clicked")
+						path += "knn/10"
+						break;
+					case "20nn-button":
+						console.log("20nn-button clicked")
+						path += "knn/20"
+						break;
+					case "50nn-button":
+						console.log("50nn-button clicked")
+						path += "knn/50"
+						break;
+					default:
+						console.log("other")
+				}
+
+				$.ajax({
+					type : "GET",
+					contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
+					url : "ourURL" + path,
+					data: data,
+					success : function(result) {
+						console.log('model called successfully')
+						//display popup with results
+						// window.location.replace("/");
+					}
+				});
+			}
 
 
 		</script>
