--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,7 +31,7 @@
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 
 
-			<script src="js/awesomplete.js" async></script>
+			<script src="js/awesomplete.js" type="text/javascript"></script>
 
 		<style>
 		.form-group {
@@ -312,7 +312,7 @@
 
 			function modelButtonClicked(b) {
 
-				ourURL = "localhost:5000"
+				ourURL = "http://127.0.0.1:5000"
 
 				data = {}
 				thisRating = $("#inputRating").val();
@@ -375,6 +375,8 @@
 					success : function(response) {
 					    console.log(response);
 						console.log('model called successfully');
+						var obj = $.parseJSON(response);
+						window.alert(obj["prediction"]);
 						//display popup with results
 						// window.location.replace("/");
 					},
