Added the google trends visualization

--- a/Google_Trends/map.html
+++ b/Google_Trends/map.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 	<script src="map.js"></script>
-	<select id="inds">
+	<select id="inds" onchange="onChange()">
 		<option value="None" selected="selected">None</option>
 </select>
 	</body>
