Added stuff for linear reression

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -96,7 +96,18 @@
 
 		    <div id="menu1" class="tab-pane fade">
 		      <h3>Linear Regression (OLS) Model</h3>
-		      <p>Linear Regression with Ordinary Least Squares</p>
+		      <p>Linear Regression with Ordinary Least Squares<br></br>
+			  There are many factors that were considered when building the linear regression model.
+			  Below are images showing the correlation of the various attributes</p>
+			  <img src="correlation.png" alt = "Correlation" width="1000" height="1000" >
+			  <img src="correlation_2.png" alt = "Correlation_2" width="1000" height="1000">
+			  <p>Below are some of the models we testsed.</p>
+			  <img src="model_1.png" alt="Model_1" width = "1000" height ="1000" >
+			  <img src="model_1_residuals.png" alt="Model_1_Residuals" width = "1000" height ="1000" >
+			  <img src="model_2.png" alt="Model_2" width = "1000" height ="1000" >
+			  <img src="model_3_residuals.png" alt="Model_3_Residuals" width = "1000" height ="1000" >
+			  <img src="logistic_regression.png" alt="Logistic_Regression" width = "800" height ="800" >
+			  <img src="logistic_regression_confusion.png" alt="Logistic Regression Confusion" width="500" height="150">
 		    </div>
 
 		    <div id="menu2" class="tab-pane fade">
