--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -99,15 +99,15 @@
 		      <p>Linear Regression with Ordinary Least Squares<br></br>
 			  There are many factors that were considered when building the linear regression model.
 			  Below are images showing the correlation of the various attributes</p>
-			  <img src="correlation.png" alt = "Correlation" width="1000" height="1000" >
-			  <img src="correlation_2.png" alt = "Correlation_2" width="1000" height="1000">
-			  <p>Below are some of the models we testsed.</p>
-			  <img src="model_1.png" alt="Model_1" width = "1000" height ="1000" >
-			  <img src="model_1_residuals.png" alt="Model_1_Residuals" width = "1000" height ="1000" >
-			  <img src="model_2.png" alt="Model_2" width = "1000" height ="1000" >
-			  <img src="model_3_residuals.png" alt="Model_3_Residuals" width = "1000" height ="1000" >
-			  <img src="logistic_regression.png" alt="Logistic_Regression" width = "800" height ="800" >
-			  <img src="logistic_regression_confusion.png" alt="Logistic Regression Confusion" width="500" height="150">
+			  <img src="correlation.png" alt = "Correlation" width="75%" >
+			  <img src="correlation_2.png" alt = "Correlation_2" width="75%">
+			  <p>Below are some of the models we tested.</p>
+			  <img src="model_1.png" alt="Model_1" width = "75%" >
+			  <img src="model_1_residuals.png" alt="Model_1_Residuals" width = "50%" >
+			  <img src="model_2.png" alt="Model_2" width = "75%" >
+			  <img src="model_3_residuals.png" alt="Model_3_Residuals" width = "50%">
+			  <img src="logistic_regression.png" alt="Logistic_Regression" width = "60%" >
+			  <img src="logistic_regression_confusion.png" alt="Logistic Regression Confusion" width="75%">
 		    </div>
 
 		    <div id="menu2" class="tab-pane fade">
@@ -146,7 +146,20 @@
 
 		    <div id="menu3" class="tab-pane fade">
 		      <h3>Support Vector Machine</h3>
-		      <p>Support Vector Machine</p>
+		      <p>Our intuition for using a linear support vector machine was that there may be a way to divide the movies linearly by whether they are profitable or not. As described on the KNN tab, we first tested this classifier using common features (left), and then with our additional generated features (right). Similar to KNN, using only common features led to classfying everything as not-profitable, while adding our features resulted in some correct profitable predicitons as well. Those results are shown in the confusion matricies below:</p>
+
+		      <table border=1>
+				<tr>
+				<td>
+				<img src="../Models/LinSvmCommonFeatures.png" width="48%"/>
+				<img src="../Models/LinSvmAllFeatures.png" width="48%"/>
+				</td>
+				</tr>
+			  </table>
+
+			  <p>It should be clear that this model also isn't amazing at making these predictions either, but it is able to correctly predict profitable 36% of the time and not profitable 77% of the time. The KNN models in general were better than this SVM model.</p>
+
+
 		    </div>
 
 		    <div id="menu4" class="tab-pane fade">
