add headers to regression tab

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -59,7 +59,7 @@
 
 		  <ul class="nav nav-tabs">
 		    <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-		    <li><a data-toggle="tab" href="#menu1">OLS</a></li>
+		    <li><a data-toggle="tab" href="#menu1">Regression</a></li>
 		    <li><a data-toggle="tab" href="#menu2">KNN</a></li>
 		    <li><a data-toggle="tab" href="#menu3">SVM</a></li>
 		    <li><a data-toggle="tab" href="#menu4">Custom Movie</a></li>
@@ -96,17 +96,22 @@
 		    </div>
 
 		    <div id="menu1" class="tab-pane fade">
-		      <h3>Linear Regression (OLS) Model</h3>
-			  There are many factors that were considered when building the linear regression model.
-			  Below are images showing the correlation of the various attributes</p>
+		      <h3>Regression Models</h3>
+		      <br>
+		      <h4>Correlation Matrices - by Attribute for Lin Reg Model</h4>
 			  <img src="correlation.png" alt = "Correlation" width="75%" >
 			  <img src="correlation_2.png" alt = "Correlation_2" width="75%">
-			  <p>Below are some of the models we tested.</p>
+		      <h4>Linear Regression (OLS) - Subset</h4>
 			  <img src="model_1.png" alt="Model_1" width = "75%" >
+			  <h4>Linear Regression (OLS) - Subset Residuals</h4>
 			  <img src="model_1_residuals.png" alt="Model_1_Residuals" width = "50%" >
+			  <h4>Linear Regression (OLS) - Full Set</h4>
 			  <img src="model_2.png" alt="Model_2" width = "75%" >
+			  <h4>Linear Regression (OLS) - Full Set Residuals</h4>
 			  <img src="model_3_residuals.png" alt="Model_3_Residuals" width = "50%">
+			  <h4>Logistic Regression - Subset</h4>
 			  <img src="logistic_regression.png" alt="Logistic_Regression" width = "60%" >
+			  <h4>Logistic Regression - Accuracy</h4>
 			  <img src="logistic_regression_confusion.png" alt="Logistic Regression Confusion" width="75%">
 		    </div>
 
