--- a/Actors/testActorGraph2.html
+++ b/Actors/testActorGraph2.html
@@ -9,15 +9,15 @@
     margin: auto;
   }
 </style>
+<script type="text/javascript" src="../Site/vend/sigma.min.js"></script>
+<script type="text/javascript" src="../Site/vend/sigma.parsers.gexf.min.js"></script>
 </head>
 <body>
   <div id="sigma-container"></div>
-  <script type="text/javascript" src="../Site/vend/sigma.min.js"></script>
-  <script type="text/javascript" src="../Site/vend/sigma.parsers.gexf.min.js"></script>
   <script>
 
     sigma.parsers.gexf(
-      'actorGraph6.gexf',
+      '../Actors/actorGraph6.gexf',
       { // Here is the ID of the DOM element that
         // will contain the graph:
         container: 'sigma-container'
