update plotly visualizations

--- a/Site/index.html
+++ b/Site/index.html
@@ -20,7 +20,7 @@
     <div id="treemap"></div>
 
     <script>
-        var dataURL = "res/fullData-cleaner.csv";
+        var dataURL = "res/fulldata-cleaner.csv";
         var xField = "releaseDate";
         var yField = "domesticTotalGross";
 
@@ -213,7 +213,7 @@
     </script>
 
     <script>
-        var dataURL = "res/fullData-cleaner.csv";
+        var dataURL = "res/fulldata-cleaner.csv";
 
         Plotly.d3.csv(dataURL, function(err, rawData) {
             if (err) throw err;
