update sigma paths

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -39,8 +39,8 @@
 			<script type="text/javascript" src="d3-queue.v3.min.js"></script>
 			<script type="text/javascript" src="topojson.v1.min.js"></script>
 			<script type="text/javascript" src="d3.tip.v0.6.3.js"></script>
-      <script type="text/javascript" src="../Site/Vend/sigma.min.js"></script>
-      <script type="text/javascript" src="../Site/Vend/sigma.parsers.gexf.min.js"></script>
+      <script type="text/javascript" src="vend/sigma.min.js"></script>
+      <script type="text/javascript" src="vend/sigma.parsers.gexf.min.js"></script>
 		<style>
 		.form-group {
 			/*width: 25%;*/
