--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -110,26 +110,26 @@
 		      <h3>Regression Models</h3>
 		      <br>
 			  <h4>Domestic Gross Revenue Distribution - Original and Square root transformation</h4>
-			  <img src="regression_1.png" alt = "Original Domestic Gross Revenue" width="75%" >
-			  <img src="regression_2.png" alt = "Square Root of Domestic Gross Revenue" width="75%">
+			  <img src="regression_1.PNG" alt = "Original Domestic Gross Revenue" width="75%" >
+			  <img src="regression_2.PNG" alt = "Square Root of Domestic Gross Revenue" width="75%">
 		      <h4>Correlation Matrices - by Attribute for Lin Reg Model and P values</h4>
 			  <img src="correlation.png" alt = "Correlation" width="75%" >
 			  <img src="correlation_2.png" alt = "Correlation_2" width="75%">
-			  <img src="regression_3.png" alt = "Correlation" width="75%" >
-			  <img src="regression_4.png" alt = "Correlation_2" width="75%">
+			  <img src="regression_3.PNG" alt = "Correlation" width="75%" >
+			  <img src="regression_4.PNG" alt = "Correlation_2" width="75%">
 		      <h4>Linear Regression (OLS) - Subset</h4>
-			  <img src="regression_5.png" alt="Model_1" width = "75%" >
+			  <img src="regression_5.PNG" alt="Model_1" width = "75%" >
 			  <h4>Linear Regression (OLS) - Results</h4>
-			  <img src="regression_6.png" alt="Model_1_Results" width = "50%" >
+			  <img src="regression_6.PNG" alt="Model_1_Results" width = "50%" >
 			  <h4>Linear Regression (OLS) - Full Set</h4>
-			  <img src="regression_7.png" alt="Model_2" width = "75%" >
-			  <img src="regression_8.png" alt="Model_2" width = "75%" >
+			  <img src="regression_7.PNG" alt="Model_2" width = "75%" >
+			  <img src="regression_8.PNG" alt="Model_2" width = "75%" >
 			  <h4>Linear Regression (OLS) - Results</h4>
-			  <img src="regression_9.png" alt="Model_2 Results" width = "50%" >
+			  <img src="regression_9.PNG" alt="Model_2 Results" width = "50%" >
 			  <h4>Linear Regression (OLS) - Model 3</h4>
-			  <img src="regression_10.png" alt="Model_3" width = "75%">
+			  <img src="regression_10.PNG" alt="Model_3" width = "75%">
 			  <h4>Linear Regression (OLS) - Results</h4>
-			  <img src="regression_11.png" alt="Model_3 Results" width = "50%" >
+			  <img src="regression_11.PNG" alt="Model_3 Results" width = "50%" >
 			  <h4>Logistic Regression - Subset</h4>
 			  <img src="logistic_regression.png" alt="Logistic_Regression" width = "60%" >
 			  <h4>Logistic Regression - Accuracy</h4>
